--- a/CLASE 10/index.html
+++ b/CLASE 10/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nombrando clases BEM</title>
+    <title>Uso de linear-gradient</title>
     <link
         href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@300;500&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="../CLASE 9/styles.css">
+    <link rel="stylesheet" href="../CLASE 10/styles.css">
 </head>
 
 <body>
