--- a/CLASE 11/index.html
+++ b/CLASE 11/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nombrando clases BEM</title>
+    <title>Uso de position para boton flotante</title>
     <link
         href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@300;500&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="../CLASE 9/styles.css">
+    <link rel="stylesheet" href="../CLASE 11/styles.css">
 </head>
 
 <body>
@@ -17,7 +17,7 @@
         <div class="header--tilte-container">
             <h1>La próxima revolución en el intercambio de criptomonedas</h1>
             <p>Batabit te ayuda a navegar entre los diferentes precios y tendencias</p>
-            <a href="" class="header--button">Conoce Nuestros Planes <span>i</span></a>
+            <a href="" class="header--button">Conoce Nuestros Planes <span></span></a>
         </div>
     </header>
     <main>
