--- a/CLASE 12/index.html
+++ b/CLASE 12/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nombrando clases BEM</title>
+    <title>Estructura base de la seccion de intercambio</title>
     <link
         href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@300;500&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="../CLASE 9/styles.css">
+    <link rel="stylesheet" href="../CLASE 12/styles.css">
 </head>
 
 <body>
@@ -17,11 +17,22 @@
         <div class="header--tilte-container">
             <h1>La próxima revolución en el intercambio de criptomonedas</h1>
             <p>Batabit te ayuda a navegar entre los diferentes precios y tendencias</p>
-            <a href="" class="header--button">Conoce Nuestros Planes <span>i</span></a>
+            <a href="" class="header--button">Conoce Nuestros Planes <span></span></a>
         </div>
     </header>
     <main>
-        <section></section>
+        <section class="main-exchange-container">
+            <div class="backgroundImg"></div>
+            <div class="main-exchange-container--title">
+                <h2>Visibilizamos todas las tasas de cambio.</h2>
+                <p>Traemos información en tiempo real de las casas de cambio y las monedas más importantes del mundo.</p>
+            </div>
+            <section class="main-tables-container">
+                <div>
+
+                </div>
+            </section>
+        </section>
         <section></section>
         <section></section>
         <section></section>
